# solana-learning

./: README.md
friend_tech/: README.md
friend_tech/programs/: Cargo.toml
friend_tech/programs/src/: lib.rs
simple_launchpad/native/program/: Cargo.toml
simple_launchpad/native/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
